added the whole site

--- a/index.html
+++ b/index.html
@@ -1,34 +1,461 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>zFashion</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <nav id="header">
-        <a href="#"><div class="logo"></div></a>
-        <div>
-            <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
-            </ul>
-        </div>
+      <a href="#"><div class="logo"></div></a>
+      <div>
+        <ul id="navbar">
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li>
+            <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <section id="hero">
-        <h4>Ofertas de troca</h4>
-        <h2>Super Promoções</h2>
-        <h1>Em todos os produtos</h1>
-        <p>Economize mais com os coupons & até <span>70% OFF!</span></p>
-        <button>Shop Now</button>
+      <h4>Ofertas de troca</h4>
+      <h2>Super Promoções</h2>
+      <h1>Em todos os produtos</h1>
+      <p>Economize mais com os coupons & até <span>70% OFF!</span></p>
+      <button>Shop Now</button>
     </section>
-</body>
+    <section id="feature" class="section-p1">
+      <div class="fe-box">
+        <img src="assets/img/features/f1.png" alt="free shipping" />
+        <h6>Entrega gratuita</h6>
+      </div>
+      <div class="fe-box">
+        <img src="assets/img/features/f2.png" alt="free shipping" />
+        <h6>Pedido online</h6>
+      </div>
+      <div class="fe-box">
+        <img src="assets/img/features/f3.png" alt="free shipping" />
+        <h6>Economize dinheiro</h6>
+      </div>
+      <div class="fe-box">
+        <img src="assets/img/features/f4.png" alt="free shipping" />
+        <h6>Promoções</h6>
+      </div>
+      <div class="fe-box">
+        <img src="assets/img/features/f5.png" alt="free shipping" />
+        <h6>Venda feliz</h6>
+      </div>
+      <div class="fe-box">
+        <img src="assets/img/features/f6.png" alt="free shipping" />
+        <h6>Suporte 24/7</h6>
+      </div>
+    </section>
+    <section id="product1" class="section-p1">
+      <h2>Produtos Patrocinados</h2>
+      <p>Summer Collection - Design novo e moderno</p>
+      <div class="pro-container">
+        <div class="pro">
+          <img src="assets/img/products/f1.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Cartoon Astronaut T-Shirt</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$79.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/f2.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Floral T-Shirt</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$89.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/f3.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Floral T-Shirt</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/f4.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Floral T-Shirt</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/f5.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Floral T-Shirt</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/f6.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Casaco moderno</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/f7.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Calça fora de moda</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/f8.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Camisa de gatos</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="banner" class="section-m1">
+      <div class="banner">
+        <p>Serviço de reparo</p>
+        <h1>Até <span>70% OFF</span> em todas as t-Shirts e acessorios</h1>
+        <button>Saiba mais</button>
+      </div>
+    </section>
+    <section id="product2" class="section-p1">
+      <h2>Novos Produtos</h2>
+      <p>Summer Collection - Design novo e moderno</p>
+      <div class="pro-container">
+        <div class="pro">
+          <img src="assets/img/products/n1.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Camisa social</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$79.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/n2.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Camisa social</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$89.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/n3.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Camisa social</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/n4.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Camisa casual</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/n5.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Camisa social</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/n6.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Bermuda fashion</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/n7.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Camisa brega</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="pro">
+          <img src="assets/img/products/n8.jpg" alt="produto" />
+          <div class="description">
+            <span>adidas</span>
+            <h5>Camisa casual</h5>
+            <div class="star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="buy">
+              <h4>R$69.<span>95</span></h4>
+              <a href="#"><i class="fas fa-cart-plus"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="sm-banner" class="section-p1">
+      <div class="banner-box">
+        <h4>Promoções Loucas</h4>
+        <h2>Compre 1 Ganhe 1</h2>
+        <span>Os melhores classicos estão disponiveis no ZETA</span>
+        <button>Saiba mais</button>
+      </div>
+      <div class="banner-box">
+        <h4>Verão/Outuno</h4>
+        <h2>Proxima estação</h2>
+        <span>Os melhores classicos estão disponiveis no ZETA</span>
+        <button>Coleção</button>
+      </div>
+      <div class="banner-box">
+        <h3>Vendas de estação</h3>
+        <span>Coleção inverno -50% OFF</span>
+      </div>
+      <div class="banner-box">
+        <h3>Nova coleção de calçados</h3>
+        <span>Primavera/Verão 2022</span>
+      </div>
+      <div class="banner-box">
+        <h3>T-SHIRTS</h3>
+        <span>Novas estampas Trendy</span>
+      </div>
+    </section>
+    <section id="newsletter">
+      <div class="newsletter-container">
+        <div>
+          <h3>Fique por dentro das novidades</h3>
+          <p>
+            Receba emails sobre as novidades e <span>ofertas especiais.</span>
+          </p>
+        </div>
+        <div class="form">
+          <input
+            type="email"
+            name="email"
+            id="newsletter_mail"
+            placeholder="Seu melhor endereço mail..."
+            autocomplete="off"
+          />
+          <button>Inscriva-se</button>
+        </div>
+      </div>
+    </section>
+    <section id="footer">
+         <div class="footer_container">
+        <div class="contact">
+          <img src="assets/img/logo.svg" alt="logo" />
+          <h4>Contatos</h4>
+          <p><span>Edereço:</span>Av. Gaspar de Lemos - Ilha de Guaratiba</p>
+          <p><span>Telefone:</span>+5521 981302437</p>
+          <p><span>Horario:</span>10:00 - 16:00 Seg - Sab</p>
+          <h4>Siga-me</h4>
+          <ul class="social_footer">
+            <li>
+              <a href=""><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-github"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fa-brands fa-youtube"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="links">
+            <h4>Sobre</h4>
+            <ul>
+              <li><a href="#">Sobre nos</a></li>
+              <li><a href="#">Informações de entrega</a></li>
+              <li><a href="#">Politica de privacidade</a></li>
+              <li><a href="#">Termos e Condições</a></li>
+              <li><a href="#">Contate-nos</a></li>
+            </ul>
+          </div>
+      </div>
+      
+    </section>
+  </body>
 </html>
