Added footer to html and stylished

--- a/index.html
+++ b/index.html
@@ -417,10 +417,9 @@
         </div>
       </div>
     </section>
-    <section id="footer">
-         <div class="footer_container">
+    <section id="footer" class="section-p1">
+      <div class="footer_container">
         <div class="contact">
-          <img src="assets/img/logo.svg" alt="logo" />
           <h4>Contatos</h4>
           <p><span>Edereço:</span>Av. Gaspar de Lemos - Ilha de Guaratiba</p>
           <p><span>Telefone:</span>+5521 981302437</p>
@@ -445,17 +444,40 @@
           </ul>
         </div>
         <div class="links">
-            <h4>Sobre</h4>
-            <ul>
-              <li><a href="#">Sobre nos</a></li>
-              <li><a href="#">Informações de entrega</a></li>
-              <li><a href="#">Politica de privacidade</a></li>
-              <li><a href="#">Termos e Condições</a></li>
-              <li><a href="#">Contate-nos</a></li>
-            </ul>
+          <h4>Sobre</h4>
+          <ul>
+            <li><a href="#">Sobre nos</a></li>
+            <li><a href="#">Informações de entrega</a></li>
+            <li><a href="#">Politica de privacidade</a></li>
+            <li><a href="#">Termos e Condições</a></li>
+            <li><a href="#">Contate-nos</a></li>
+          </ul>
+        </div>
+        <div class="links">
+          <h4>Meu perfil</h4>
+          <ul>
+            <li><a href="#">Acesse</a></li>
+            <li><a href="#">Meu carrinho</a></li>
+            <li><a href="#">Meus favoridos</a></li>
+            <li><a href="#">Rastreamento pedidos</a></li>
+            <li><a href="#">Ajuda</a></li>
+          </ul>
+        </div>
+        <div class="install">
+          <h4>Instale a nossa App</h4>
+          <p>Encontra-se no App Store ou no Google Play</p>
+          <div class="stores">
+            <img src="assets/img/pay/app.jpg" alt="apple store" />
+            <img src="assets/img/pay/play.jpg" alt="google play" />
           </div>
+          <p>Sistema de pagamento seguro</p>
+          <img src="assets/img/pay/pay.png" alt="card options" />
+        </div>
       </div>
-      
+      <div class="copyrights section-p1">
+        <img src="assets/img/logo.svg" alt="logo" />
+        <p>&copy; 2023 - Todos os direitos reservados</p>
+      </div>
     </section>
   </body>
 </html>
