Index page done with all the media queries

--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li>
+          <li id="lg-bag">
             <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
           </li>
+          <a href="#" id="close"><i class="fas fa-times"></i></a>
         </ul>
+      </div>
+      <div id="mobile">
+        <a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
+        <i id="bar" class="fas fa-outdent"></i>
       </div>
     </nav>
     <section id="hero">
@@ -374,8 +379,8 @@
     <section id="sm-banner" class="section-p1">
       <div class="banner-box">
         <h4>Promoções Loucas</h4>
-        <h2>Compre 1 Ganhe 1</h2>
-        <span>Os melhores classicos estão disponiveis no ZETA</span>
+        <h2>Pague 1 Leve 2</h2>
+        <span>Os melhores classicos estão na ZETA</span>
         <button>Saiba mais</button>
       </div>
       <div class="banner-box">
@@ -479,5 +484,6 @@
         <p>&copy; 2023 - Todos os direitos reservados</p>
       </div>
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
