--- a/contact.html
+++ b/contact.html
@@ -86,6 +86,14 @@
             <textarea name="message" id="message" cols="30" rows="10" placeholder="Sua mensagem..." ></textarea>
             <button class="normal">Enviar</button>
         </form>
+        <div class="people">
+            <div class="person">
+                <img src="assets/img/people/paolo.jpg" alt="mine photo">
+                <p><span>Pierpaolo Zotti</span>ZETA's owner & founder 
+                    <br> +5521 98130.2437<br>zeta.designer.rj@gmail.com
+                </p>
+            </div>
+        </div>
     </section>
     <section id="footer" class="section-p1">
       <div class="footer_container">
