--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <title>zFashion</title>
+    <title>zFashion - shop</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -50,14 +50,14 @@
             <span>adidas</span>
             <h5>Cartoon Astronaut T-Shirt</h5>
             <div class="star">
-              <i class="fas fa-star"></i>
+              <i class="fas fa-star" ></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$79.<span>95</span></h4>
+              <h4>R$79.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -75,7 +75,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$89.<span>95</span></h4>
+              <h4>R$89.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -93,7 +93,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -111,7 +111,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -129,7 +129,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -147,7 +147,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -165,7 +165,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -183,7 +183,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -201,7 +201,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$79.<span>95</span></h4>
+              <h4>R$79.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -219,7 +219,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$89.<span>95</span></h4>
+              <h4>R$89.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -237,7 +237,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -255,7 +255,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -273,7 +273,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -291,7 +291,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -309,7 +309,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
@@ -327,7 +327,7 @@
               <i class="fas fa-star"></i>
             </div>
             <div class="buy">
-              <h4>R$69.<span>95</span></h4>
+              <h4>R$69.95</h4>
               <a href="#"><i class="fas fa-cart-plus"></i></a>
             </div>
           </div>
